# turtlebot

./: .gitignore  setup_create.sh  setup_kobuki.sh
turtlebot_bringup/: package.xml
turtlebot_bringup/launch/: 3dsensor.launch  concert_client.launch  concert_minimal.launch  minimal.launch  turtlebot_world.launch  turtlebot_world_multi.launch
turtlebot_bringup/launch/includes/: description.launch.xml  mobile_base.launch.xml  robot.launch.xml
turtlebot_bringup/param/: base.yaml  control.yaml
turtlebot_bringup/rviz/: 2turtles.rviz
turtlebot_description/: test.launch
turtlebot_description/meshes/sensors/: rplidar.dae  rplidar.stl  rplidar2.dae
turtlebot_description/robots/: kobuki_hexagons_astra_reactor_no_wrist.urdf.xacro  kobuki_hexagons_astra_reactor_wrist.urdf.xacro  kobuki_hexagons_astra_urg04lx.urdf.xacro  kobuki_hexagons_astra_widowx.urdf.xacro  kobuki_hexagons_kinect_.urdf.xacro  kobuki_hexagons_no3d_notop.urdf.xacro  kobuki_hexagons_no3d_rplidar.urdf.xacro  kobuki_hexagons_no3d_urg04lx.urdf.xacro  kobuki_hexagons_rplidar.urdf.xacro  kobuki_nostacks_no3d_rplidar.urdf.xacro
turtlebot_description/urdf/: kobuki_gazebo.urdf.xacro  kobuki_multi.urdf.xacro  turtlebot_gazebo.urdf.xacro  turtlebot_library.urdf.xacro  turtlebot_library_multi.urdf.xacro
turtlebot_scripts/: CMakeLists.txt  package.xml
turtlebot_scripts/config/: 58-rplidar.rules
turtlebot_scripts/scripts/: create_rplidar_udev_rules
turtlebot_teleop/: CMakeLists.txt
turtlebot_teleop/launch/: ps4_teleop.launch
turtlebot_teleop/src/: turtlebot_joy.cpp
(+11 files in other folders)
